[metadata]
name = python-retry-decorator
author = Ryan Holt
author_email = ryanwholt@hotmail.com
summary = Handle a retry while logging the retries after an unexpected exception/result is captured.
description_file = README.md
description_content_type = text/x-rst; charset=UTF-8
home_page = https://github.com/Reyalsorik/python-retry-decorator
project_urls =
    Documentation = https://github.com/Reyalsorik/python-retry-decorator/README.md
    Source Code = https://github.com/Reyalsorik/python-retry-decorator

[pbr]
skip_authors = True
skip_changelog = True

[files]
packages = retry_decorator

[options]
include_package_data = true
