[metadata]
name = python-retry-decorator
author = Ryan Holt
author_email = ryanwholt@hotmail.com
description = Handle a retry while logging the retries after an unexpected exception/result is captured.
long_description = file: README.md
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/Reyalsorik/python-retry-decorator
project_urls =
    Documentation = https://github.com/Reyalsorik/python-retry-decorator/README.md
    Source Code = https://github.com/Reyalsorik/python-retry-decorator

[options]
packages = retry_decorator
include_package_data = true
